# Simple_ini

./: .gitignore  CMakeLists.txt  Ini_entry.cpp  Ini_entry.h  Ini_manager.cpp  Ini_manager.h  Ini_section.cpp  Ini_section.h  Invalid_entry_exception.h  Invalid_entry_exeption.h  README.md  Test.ini  main.cpp
Tests/: CMakeLists.txt  Ini_entry_test.cpp  Ini_manager_test.cpp  Ini_manager_test_fixture.cpp  Ini_section_fixture.cpp  Ini_section_test.cpp  runAllTests.cpp.cpp
